--- a/config/database.yml
+++ b/config/database.yml
@@ -80,7 +80,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
-  database: react_rails_api_project_template_production
-  username: react_rails_api_project_template
-  password: <%= ENV['REACT_RAILS_API_PROJECT_TEMPLATE_DATABASE_PASSWORD'] %>
+  url: <%= ENV ["DATABASE_URL"] %>
+  # database: react_rails_api_project_template_production
+  # username: react_rails_api_project_template
+  # password: <%= ENV['REACT_RAILS_API_PROJECT_TEMPLATE_DATABASE_PASSWORD'] %>
