--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   },
   "scripts": {
     "build": "npm install --prefix client && npm run build --prefix client",
-    "clean": "rm -rf public",
-    "deploy": "cp -a client/build/. public/",
-    "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
+    "clean": "rm -rf public"
+  
   },
   "dependencies": {
     "react-router-dom": "^5.2.0"
