--- a/config/database.yml
+++ b/config/database.yml
@@ -16,14 +16,14 @@
 #
 default: &default
   adapter: postgresql
-  # encoding: unicode
+  encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: react_rails_api_project_template_development
+  database: online-coffe-shop_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: react_rails_api_project_template_test
+  database: online-coffe-shop_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,7 +80,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  url: <%= ENV ["DATABASE_URL"] %>
+  url: <%= ENV["DATABASE_URL"] %>
   # database: react_rails_api_project_template_production
   # username: react_rails_api_project_template
   # password: <%= ENV['REACT_RAILS_API_PROJECT_TEMPLATE_DATABASE_PASSWORD'] %>
